Change package name for internal deploy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "three",
+  "name": "vg-three",
   "version": "0.138.0",
   "description": "JavaScript 3D library",
   "type": "module",
