--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vg-three",
-  "version": "0.138.0",
+  "name": "three",
+  "version": "0.138.4",
   "description": "JavaScript 3D library",
   "type": "module",
   "main": "./build/three.js",
